[gd_scene load_steps=6 format=4 uid="uid://c2uowl1x3nkn2"]

[ext_resource type="Script" uid="uid://v6tjih10bvfq" path="res://scripts/tools/litter_picker.gd" id="1_eavmo"]
[ext_resource type="Texture2D" uid="uid://cr5ywed3nqyok" path="res://assets/temp/picker.png" id="2_2ic0e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w5ts6"]
albedo_texture = ExtResource("2_2ic0e")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_spwhw"]
_surfaces = [{
"aabb": AABB(-0.0785644, -1.61085, -0.0907183, 0.157129, 2.39358, 0.181437),
"format": 34359742465,
"index_count": 216,
"index_data": PackedByteArray("AAABAAIAAwACAAEAAAAEAAEABAADAAEABQAAAAIABAAGAAMABQACAAcAAgADAAgAAgAIAAcACAADAAkABgAJAAMACgAHAAgACgAFAAcACwAIAAkACwAKAAgABgALAAkADAAFAAoADQAKAAsADQAMAAoADgANAAsADgALAAYADAANAA8ADQAOABAADQAQAA8AEQAOAAYAEQAGAAQADgASABAADgARABIADwAQABMAFAARAAQAFAAEAAAAEQAVABIAEQAUABUAEAASABYAEAAWABMAEgAVABcAEgAXABYAGAAUAAAAGAAAAAUADAAYAAUAFAAYABkAFAAZABUAGAAMABoAGAAaABkADAAPABoAFQAZABsAFQAbABcAGQAaABwAGQAcABsAGgAPAB0AGgAdABwADwATAB0AFwAbAB4AFgAXAB4AGwAcAB8AHAAdAB8AEwAWAB8AHQATAB8AFgAeAB8AEwAfAB8AHwAdAB4AHQAfAB4AHgAbAB8AGwAfAB8AHgAeAB8AHgAeAB8AHwAeAB8AHwAeAB8AIAAhACAAIQAhACAAIQAiACAAIQAhACIA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 35,
"vertex_data": PackedByteArray("I2KNMSjoAz+Hyrm9XeagPSZhSD+Hyjm9I2KNMSZhSD+Hyrm9XOagPSZhSD+Jyjk9XeagPSjoAz+Hyjm9W+agvSjoAz+Fyjm9XOagPSjoAz+Jyjk9W+agvSZhSD+Fyjm9W+agvSZhSD+Fyjk9TR6DsSZhSD+Hyrk9W+agvSjoAz+Fyjk9TR6DsSjoAz+Hyrk9W+agvc+SmL+Fyjk9TR6Dsc+SmL+Hyrk9XOagPc+SmL+Jyjk9ZzwHNEj6oL9+rHg9vVtXPUj6oL+ErPg8XeagPc+SmL+Hyjm9vltXPUj6oL99rPi8mtOlPEn6oL+Xej88I2KNMc+SmL+Hyrm9VO8MNEj6oL+CrHi9m9OlPEn6oL+Wej+8akwKNEn6oL+Yer+8W+agvc+SmL+Fyjm9eltXvUj6oL99rPi8eltXvUj6oL99rPg8E9OlvEn6oL+Tej+8E9OlvEn6oL+Tej88uhoINEn6oL+Uer88JHwINJDbu7/QJxWxuSAKNJDbu7/QJxWxVFrFNGMwzr95QKQwijXGNGMwzr/QJxWxVFrFNGMwzr/QJxWx")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3hdop"]
resource_name = "basic_picker_Cylinder"
_surfaces = [{
"aabb": AABB(-0.0785644, -1.61085, -0.0907183, 0.157129, 2.39358, 0.181437),
"attribute_data": PackedByteArray("AACAPwAAAAAAAAA/AAAAPwAAAD8AAAAAAACAPwAAAD8AAIA/AAAAAAAAAD8AAAA/AAAAPwAAAAAAAIA/AAAAPwAAgD8AAAAAAAAAPwAAAD8AAAA/AAAAAAAAgD8AAAA/AACAPwAAAAAAAAA/AAAAPwAAAD8AAAAAAACAPwAAAD8AAIA/AAAAPwAAgD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAAD8AAAA/AAAAPwAAAAAAAIA/AAAAAAAAAD8AAAA/AAAAPwAAAAAAAIA/AAAAPwAAgD8AAAAAAAAAPwAAAD8AAAA/AAAAAAAAgD8AAAA/AAAAAAAAAD8AAAA/AAAAAAAAAD8AAAA/AAAAAAAAAD8AAAAAAAAAAAAAAD8AAAAAAAAAPwAAAD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAgD8AAAA/AAAAPwAAAAAAAIA/AAAAAAAAAD8AAAA/AACAPwAAAD8AAAA/AAAAAAAAgD8AAAAAAAAAPwAAAD8AAIA/AAAAPwAAAD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAgD8AAAA/AAAAPwAAAAAAAIA/AAAAAAAAAD8AAAA/AACAPwAAAD8AAAA/AAAAAAAAgD8AAAAAAAAAPwAAAD8AAIA/AAAAPwAAAD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAgD8AAIA/AAAAPwAAAD8AAIA/AAAAPwAAAD8AAIA/AACAPwAAAD8AAAA/AAAAAAAAgD8AAAAAAAAAPwAAAD8AAIA/AAAAPwAAAD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAgD8AAAA/AAAAPwAAAAAAAIA/AAAAAAAAAD8AAAA/AACAPwAAAD8AAAA/AAAAAAAAgD8AAAAAAAAAPwAAAD8AAIA/AAAAPwAAAD8AAAAAAACAPwAAAAAAAAA/AAAAPwAAgD8AAAA/AAAAPwAAAD8AAAAAAAAAPwAAAAAAAAAAAAAAPwAAAAAAAAAAAAAAAAAAAD8AAIA/AAAAPwAAgD8AAIA/AAAAPwAAAD8AAAA/AACAPwAAgD8AAAA/AACAPwAAgD8AAAA/AAAAPwAAAD8AAIA/AACAPwAAAD8AAAA/AACAPwAAAD8AAAA/AACAPwAAgD8AAIA/AAAAPwAAAD8AAIA/AAAAPwAAAD8AAIA/AACAPwAAgD8AAAA/AAAAPwAAgD8AAAA/AAAAPwAAgD8AAIA/AAAAPwAAAAAAAAAAAAAAPwAAAAAAAAAAAAAAPwAAAD8AAAA/AAAAAAAAAAAAAAA/AAAAAAAAAAAAAAA/AAAAPwAAAD8AAAAAAAAAAAAAAD8AAAAAAAAAAAAAAD8AAAA/AAAAPwAAAAAAAAAAAAAAPwAAAAAAAAAAAAAAPwAAAD8AAAA/AAAAAAAAAAAAAAA/AAAAAAAAAAAAAAA/AAAAPwAAAD8AAAAAAAAAAAAAAD8AAAAAAAAAAAAAAD8AAAA/"),
"format": 34359742487,
"index_count": 216,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEQAQABMAEwAQABQAEQATABUAFgAXABgAFgAZABcAGgAbABwAGgAdABsAHgAfACAAIQAfAB4AHwAhACIAHwAiACMAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWABZAFoAWwBZAFgAWQBbAFwAXABbAF0AXgBfAGAAYABfAGEAYgBjAGQAZABjAGUAZgBnAGgAZgBpAGcAagBrAGwAagBtAGsAbgBvAHAAbgBxAG8AcgBzAHQAcgB1AHMAdgB3AHgAdgB5AHcAegB7AHwAegB9AHsAfgB/AIAAfgCBAH8AggCDAIQAggCFAIMAhgCHAIgAhgCJAIcA"),
"material": SubResource("StandardMaterial3D_w5ts6"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 138,
"vertex_data": PackedByteArray("I2KNMSjoAz+Hyrm9XeagPSZhSD+Hyjm9I2KNMSZhSD+Hyrm9XeagPSjoAz+Hyjm9XeagPSjoAz+Hyjm9XOagPSZhSD+Jyjk9XeagPSZhSD+Hyjm9XOagPSjoAz+Jyjk9XOagPSjoAz+Jyjk9TR6DsSZhSD+Hyrk9XOagPSZhSD+Jyjk9TR6DsSjoAz+Hyrk9TR6DsSjoAz+Hyrk9W+agvSZhSD+Fyjk9TR6DsSZhSD+Hyrk9W+agvSjoAz+Fyjk9XOagPSZhSD+Jyjk9I2KNMSZhSD+Hyrm9XeagPSZhSD+Hyjm9W+agvSZhSD+Fyjk9TR6DsSZhSD+Hyrk9W+agvSZhSD+Fyjm9W+agvSjoAz+Fyjk9W+agvSZhSD+Fyjm9W+agvSZhSD+Fyjk9W+agvSjoAz+Fyjm9W+agvSjoAz+Fyjm9I2KNMSZhSD+Hyrm9W+agvSZhSD+Fyjm9I2KNMSjoAz+Hyrm9VFrFNGMwzr95QKQwijXGNGMwzr/QJxWxVFrFNGMwzr95QKQwijXGNGMwzr/QJxWxVFrFNGMwzr/QJxWxVFrFNGMwzr95QKQwTR6Dsc+SmL+Hyrk9vVtXPUj6oL+ErPg8ZzwHNEj6oL9+rHg9XOagPc+SmL+Jyjk9eltXvUj6oL99rPg8uhoINEn6oL+Uer88E9OlvEn6oL+Tej88ZzwHNEj6oL9+rHg9W+agvc+SmL+Fyjm9eltXvUj6oL99rPg8eltXvUj6oL99rPi8W+agvc+SmL+Fyjk9XOagPc+SmL+Jyjk9vltXPUj6oL99rPi8vVtXPUj6oL+ErPg8XeagPc+SmL+Hyjm9W+agvc+SmL+Fyjk9ZzwHNEj6oL9+rHg9eltXvUj6oL99rPg8TR6Dsc+SmL+Hyrk9I2KNMc+SmL+Hyrm9eltXvUj6oL99rPi8VO8MNEj6oL+CrHi9W+agvc+SmL+Fyjm9XeagPc+SmL+Hyjm9VO8MNEj6oL+CrHi9vltXPUj6oL99rPi8I2KNMc+SmL+Hyrm9mtOlPEn6oL+Xej88uSAKNJDbu7/QJxWxuSAKNJDbu7/QJxWxm9OlPEn6oL+Wej+8VO8MNEj6oL+CrHi9E9OlvEn6oL+Tej+8akwKNEn6oL+Yer+8eltXvUj6oL99rPi8vltXPUj6oL99rPi8akwKNEn6oL+Yer+8m9OlPEn6oL+Wej+8VO8MNEj6oL+CrHi9ZzwHNEj6oL9+rHg9mtOlPEn6oL+Xej88uhoINEn6oL+Uer88vVtXPUj6oL+ErPg8eltXvUj6oL99rPi8E9OlvEn6oL+Tej88E9OlvEn6oL+Tej+8eltXvUj6oL99rPg8vVtXPUj6oL+ErPg8m9OlPEn6oL+Wej+8mtOlPEn6oL+Xej88vltXPUj6oL99rPi8uSAKNJDbu7/QJxWxJHwINJDbu7/QJxWxuSAKNJDbu7/QJxWxJHwINJDbu7/QJxWxuSAKNJDbu7/QJxWxuSAKNJDbu7/QJxWxE9OlvEn6oL+Tej88uhoINEn6oL+Uer88uSAKNJDbu7/QJxWxJHwINJDbu7/QJxWxakwKNEn6oL+Yer+8E9OlvEn6oL+Tej+8JHwINJDbu7/QJxWxuSAKNJDbu7/QJxWxm9OlPEn6oL+Wej+8JHwINJDbu7/QJxWxuSAKNJDbu7/QJxWxakwKNEn6oL+Yer+8uhoINEn6oL+Uer88uSAKNJDbu7/QJxWxJHwINJDbu7/QJxWxmtOlPEn6oL+Xej88E9OlvEn6oL+Tej+8uSAKNJDbu7/QJxWxuSAKNJDbu7/QJxWxE9OlvEn6oL+Tej88W+agvc+SmL+Fyjm9I2KNMSjoAz+Hyrm9W+agvSjoAz+Fyjm9I2KNMc+SmL+Hyrm9W+agvc+SmL+Fyjk9W+agvSjoAz+Fyjm9W+agvSjoAz+Fyjk9W+agvc+SmL+Fyjm9TR6Dsc+SmL+Hyrk9W+agvSjoAz+Fyjk9TR6DsSjoAz+Hyrk9W+agvc+SmL+Fyjk9XOagPc+SmL+Jyjk9TR6DsSjoAz+Hyrk9XOagPSjoAz+Jyjk9TR6Dsc+SmL+Hyrk9XeagPc+SmL+Hyjm9XOagPSjoAz+Jyjk9XeagPSjoAz+Hyjm9XOagPc+SmL+Jyjk9I2KNMc+SmL+Hyrm9XeagPSjoAz+Hyjm9I2KNMSjoAz+Hyrm9XeagPc+SmL+Hyjm9//8l0f9/AID//yXR/38AgP//JdH/fwCA//8l0f9/AID+//9//38AgP7//3//fwCA/v//f/9/AID+//9//38AgNmu/3//fwCA2a7/f/9/AIDZrv9//38AgNmu/3//fwCAJVH/f/9/AIAlUf9//38AgCVR/3//fwCAJVH/f/9/AID/f/7//v//v/9//v/+/4DJ/3/+/////7//f/7//v+Ayf9//v////+//3/+//7/bNcAAP9//38AgAAA/3//fwCAAAD/f/9/AIAAAP9//38AgAAAJdH/fwCAAAAl0f9/AIAAACXR/38AgAAAJdH/fwCA/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/UqQ+YwaSTulSpD5j25Iv6VKkPmP/f+vrUqQ+Yy+fZef/fwAAiVv/v/9/AADdYP+//38AANku/7//fwAA/3//v0sks1tNXBftSySzW5xcs+xLJLNbzU5m8Esks1vPYGXns9uzW86lJe6z27NblqZN7rPbs1svn2Xns9uzWzGxZvCsWz5jKXHF6axbPmMDcuTprFs+Y89gZeesWz5j/3/r68EcUySeUvv2wRxTJGBSkfbBHFMk2Vf+/8EcUyTNTmbwPeNTJHOsk/g941MkM6wB+T3jUyQxsWbwPeNTJNlX/v++9L505JCk+r70vnTkkKT6vvS+dP///z++9L505JCk+v9/AAAAAMTj/38AAAAAkuH/fwAA/v////9/AAAAAGzX/38AAP7/xO3/fwAA/v9u8P9/AAD+/2zX/38AAP7/////fwAAdbj/v/9/AADYvP+//38AAP9//7//fwAAJdH/v/9/AABDEP+//38AALoW/7//fwAAAABs1/9/AADZLv+//38AAP7/Icj/fwAA/v9cy/9/AAAl0f+//38AAP7/bNf/f///////v/9///////+//3///////7//f///////v/9///////+//3///////788VI93SXWM9zxUj3dJdYz3PFSPd0R/jAY8VI93/39oBm8IwyvRjP//bwjDK9GM//9vCMMrWW8IBW8Iwysab1oFj/fDK9GM//+P98MrnZAB+4/3wyvkkKT6j/fDK9GM///Cq493tYqM98Krj3e6gHL5wquPd/9/lvnCq493tYqM90ALvnRJdYz3QAu+dEl1jPdAC750////v0ALvnRJdYz3AAAl0f9/AIAAACXR/38AgAAAJdH/fwCAAAAl0f9/AIAAAP9//38AgAAA/3//fwCAAAD/f/9/AIAAAP9//38AgCVR/3//fwCAJVH/f/9/AIAlUf9//38AgCVR/3//fwCA2a7/f/9/AIDZrv9//38AgNmu/3//fwCA2a7/f/9/AID///9//38AgP///3//fwCA////f/9/AID///9//38AgP//JdH/fwCA//8l0f9/AID//yXR/38AgP//JdH/fwCA")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_spwhw")

[node name="basicPicker" type="Node3D"]
script = ExtResource("1_eavmo")
pickup_paper = true
pickup_plastic = true

[node name="trashRay" type="RayCast3D" parent="."]
enabled = false
collision_mask = 248
collide_with_areas = true

[node name="basic_picker" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859426, 0.657685, -0.909751)
layers = 2
cast_shadow = 0
mesh = SubResource("ArrayMesh_3hdop")
skeleton = NodePath("")
